:sparkles: feat: add meta to image and name sites

--- a/index.html
+++ b/index.html
@@ -9,6 +9,26 @@
       rel="stylesheet"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+    <!-- Meta tags para o curso de barbeiro profissional -->
+    <meta
+      property="og:title"
+      content="Curso de Barbeiro Profissional: Domine a Arte da Barbearia Moderna!"
+    />
+    <meta
+      property="og:description"
+      content="Aprenda técnicas profissionais e transforme sua paixão em uma carreira de sucesso. Inscreva-se no curso de barbeiro profissional e destaque-se no mercado!"
+    />
+    <meta
+      property="og:image"
+      content="https://cursobarbeiroprofissional.netlify.app/assets/barberwhats.png"
+    />
+    <meta
+      property="og:url"
+      content="https://cursobarbeiroprofissional.netlify.app/"
+    />
+    <meta property="og:site_name" content="Curso Barbeiro Profissional" />
+    <meta property="og:type" content="website" />
     <link rel="stylesheet" href="style.css" />
 
     <title>Curso de Barbeiro Profissional</title>
