:sparkles: feat: change video by image

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         começando do zero!
       </h1>
 
-      <div class="video-container">
+      <!-- <div class="video-container">
         <iframe
           width="560"
           height="315"
@@ -51,6 +51,15 @@
           referrerpolicy="strict-origin-when-cross-origin"
           allowfullscreen
         ></iframe>
+      </div> -->
+      <div class="image-container">
+        <img
+          src="assets/barber1.jpg"
+          alt="Imagem representativa do curso de barbeiro"
+          class="image"
+        />
+        <!-- Adiciona esta div para criar o gradiente -->
+        <div class="gradient-overlay"></div>
       </div>
 
       <a href="#" class="cta-button"
