:sparkles: feat: change image by image1

--- a/index.html
+++ b/index.html
@@ -35,10 +35,10 @@
   </head>
   <body>
     <div class="container">
-      <h1 class="headline">
+      <!-- <h1 class="headline">
         Torne-se um <span>Barbeiro Profissional</span> mesmo que esteja
         começando do zero!
-      </h1>
+      </h1> -->
 
       <!-- <div class="video-container">
         <iframe
@@ -54,7 +54,7 @@
       </div> -->
       <div class="image-container">
         <img
-          src="assets/barber1.jpg"
+          src="assets/barber3.png"
           alt="Imagem representativa do curso de barbeiro"
           class="image"
         />
