feat: add link in button

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         <div class="gradient-overlay"></div>
       </div>
 
-      <a href="#" class="cta-button"
+      <a href="https://typebot.co/cusrobarbeiroonline" class="cta-button"
         >QUERO ME TORNAR UM BARBEIRO PROFISSIONAL</a
       >
     </div>
