feat: add clarity to map my page

--- a/index.html
+++ b/index.html
@@ -31,6 +31,8 @@
     <meta property="og:type" content="website" />
     <link rel="stylesheet" href="style.css" />
 
+    <script src="clarity.js" type="text/javascript"></script>
+
     <title>Curso de Barbeiro Profissional</title>
   </head>
   <body>
