feat: change to async my tag script

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     <meta property="og:type" content="website" />
     <link rel="stylesheet" href="style.css" />
 
-    <script src="tracking.js" type="text/javascript" defer></script>
+    <script src="tracking.js" type="text/javascript" async></script>
 
     <title>Curso de Barbeiro Profissional</title>
   </head>
