feat: add pulse button and change sentence

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
       </div>
 
       <a href="https://typebot.co/cusrobarbeiroonline" class="cta-button"
-        >QUERO ME TORNAR UM BARBEIRO PROFISSIONAL</a
+        >CLIQUE AQUI E SE TORNE UM BARBEIRO PROFISSIONAL</a
       >
     </div>
   </body>
